# bigquery-mcp-insert-demo

./: .gitignore  README.md  main.py  pyproject.toml
