[project]
name = "bigquery-mcp-insert-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google>=3.0.0",
    "google-api-python-client>=2.166.0",
    "google-auth>=2.38.0",
    "google-cloud-bigquery>=3.31.0",
    "mcp[cli]>=1.6.0",
    "ruff>=0.11.5",
]
